fixed whitespace issue

--- a/CW1/src/css/style.css
+++ b/CW1/src/css/style.css
@@ -1,8 +1,14 @@
 *{
-  font-family: arial, helvetica, sans-serif;
+font-family: arial, helvetica, sans-serif;
 }
 
-ul{
+html,body {
+    margin:0;
+    padding:0;
+}
+
+
+#navbar ul{
   list-style-type: none;
   margin: 0;
   padding: 0;
@@ -11,22 +17,25 @@ ul{
   position:fixed;
   top: 0;
   width: 100%;
+    
 }
-ul li{
+
+
+#navbar li{
   float: left;
 }
 
-li a{
+#navbar li a{
   display: block;
   color: #FDFDFF;
   text-align: center;
   padding: 20px 20px;
   text-decoration: none;
 }
-li a:hover{
+#navbar li a:hover{
   background-color: #212324;
 }
-.active
+#navbar .active
 {
   background-color: #62929E;
   color: #FDFDFF;
